--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^7.2.5|^8.0",
         "bumbummen99/shoppingcart": "^4.0",
         "consoletvs/charts": "^6.5",
         "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^3.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.20",
         "laravel/helpers": "^1.4",
@@ -41,8 +40,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-
+            "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
